--- a/confis-comphy-beds/public/index.html
+++ b/confis-comphy-beds/public/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
+    <meta 
+      name="description" 
+      content="ConfisComphyBeds - Premium quality mattresses, bed frames, and adjustable beds. Shop our collection for the perfect night's sleep with free delivery and expert support." 
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/cBlack and White Square Furniture Store Logo.png" />
     <!--
